--- a/exemple.env
+++ b/exemple.env
@@ -1,2 +1,3 @@
-tmdb_api_key=""
-tmdb_url="https://api.themoviedb.org/3"
+VITE_TMDB_API_KEY=""
+VITE_TMDB_URL="https://api.themoviedb.org/3"
+VITE_FIREBASE_API_KEY=""
