--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.7",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "dotenv": "^17.2.3",
     "firebase": "^11.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,7 +29,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.1.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
     "vite": "^7.2.0"
