--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "dotenv": "^17.2.3",
     "firebase": "^11.3.0",
+    "motion": "^12.23.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
